Closed Bug 299051 Opened 21 years ago Closed 21 years ago

Link failure on Alpha Linux: pc-relative relocation against dynamic symbol $invoke_copy_to_stack..ng

Categories

(Core :: XPCOM, defect)

DEC
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: falk, Assigned: dougt)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux alpha; en-US; rv:1.7.8) Gecko/20050610 Firefox/1.0.4 (Debian package 1.0.4-3) Build Identifier: Mozilla/5.0 (X11; U; Linux alpha; en-US; rv:1.7.8) Gecko/20050610 Firefox/1.0.4 (Debian package 1.0.4-3) [...] c++ -I/usr/X11R6/include -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-long-long -pedantic -mieee -fshort-wchar -pthread -pipe -DNDEBUG -DTRIMMED -O -fPIC -shared -Wl,-h -Wl,libxpcom_core.so -o libxpcom_core.so nsCOMPtr.o nsComponentManagerUtils.o nsDebug.o nsGenericFactory.o nsIInterfaceRequestorUtils.o nsMemory.o nsTraceRefcnt.o nsWeakReference.o nsGREGlue.o nsXPComInit.o nsStringAPI.o -Wl,--whole-archive ../../dist/lib/libxpcomds_s.a ../../dist/lib/libxpcomio_s.a ../../dist/lib/libxpcomcomponents_s.a ../../dist/lib/libxpcomthreads_s.a ../../dist/lib/libxpcomproxy_s.a ../../dist/lib/libxpcombase_s.a ../../dist/lib/libxptcall.a ../../dist/lib/libxptinfo.a ../../dist/lib/libxpt.a ../../dist/lib/libxptcmd.a ../../dist/lib/libstring_s.a -Wl,--no-whole-archive -L../../dist/lib -lplds4 -lplc4 -lnspr4 -lpthread -ldl -ldl -lm /usr/bin/ld: ../../dist/lib/libxptcmd.a(xptcinvoke_linux_alpha.o): pc-relative relocation against dynamic symbol $invoke_copy_to_stack..ng collect2: ld returned 1 exit status make[4]: *** [libxpcom_core.so] Error 1 make[4]: Leaving directory `/src/mozilla-2005.06.28/xpcom/build' Newer gccs omit unused static functions. This breaks the XPCOM wrapper, which tries to invoke a static function from an asm behind gcc's back. Reproducible: Always Steps to Reproduce: 1. Build "browser" CVS head on Alpha Linux with newer gccs (>=3.4 should do). 2. 3.
Attached patch Patch — — Splinter Review
Attachment #187540 - Flags: superreview?(shaver)
Attachment #187540 - Flags: review?(caillon)
Comment on attachment 187540 [details] [diff] [review] Patch sr+a=shaver.
Attachment #187540 - Flags: superreview?(shaver)
Attachment #187540 - Flags: superreview+
Attachment #187540 - Flags: review?(caillon)
Attachment #187540 - Flags: approval1.8b3+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Fixed on trunk for 1.8b3: thanks Falk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: