Bug 299051 - Link failure on Alpha Linux: pc-relative relocation against dynamic symbol $invoke_copy_to_stack..ng - patch by Falk Hueffner <falk@debian.org> r+a=shaver