xpcom/reflect/xptcall/src/md/unix/xptcstubs_linux_alpha.cpp
@@ -43,7 +43,7 @@
 /* Prototype specifies unmangled function name and disables unused warning */
 static nsresult
 PrepareAndDispatch(nsXPTCStubBase* self, uint32 methodIndex, PRUint64* args)
-__asm__("PrepareAndDispatch") __attribute__((unused));
+__asm__("PrepareAndDispatch") __attribute__((used));
 
 static nsresult
 PrepareAndDispatch(nsXPTCStubBase* self, uint32 methodIndex, PRUint64* args)
